--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,10 @@ body {
 
 .header {
   align-items: center;
-  background: #000000;
+  background: #2c2b2b;
   color: white;
   display: flex;
-  height: 100px;
+  height: 70px;
   justify-content: space-between;
   top: 0px;
   width: 100%;
@@ -115,7 +115,7 @@ Estilos carrusel */
   padding-left: 30px;
   width: 100%;
   position: relative;
-  /* background: gray; */
+
 }
 
 .carousel__container {
@@ -136,6 +136,7 @@ Estilos carrusel */
   -webkit-transform: scale(1.5);
   transform: scale(1.5);
   opacity: 1;
+  border: 1px solid white;
 }
 
 .carousel-item {
@@ -207,10 +208,11 @@ Estilos carrusel */
 
 .footer {
   align-items: center;
-  background-color: #000000;
+  background-color: #363535;
   display: flex;
-  height: 50px;
+  height: 40px;
   width: 100%;
+  margin-top:10px;
 }
 
 .footer a {
