--- a/styles.css
+++ b/styles.css
@@ -87,13 +87,27 @@ ul {
 .main__title {
   /* margin-top: 30px; */
   color: white;
-  font-size: 25px;
+  font-size: 40px;
 }
 
 .main__image {
   background-image: url(https://images.gog.com/559fa91bed15eb7135bc9061467d3e075ac8412a70e95766d31d2741d58bd1bb_bg_crop_1366x655.jpg);
-  width: 80%;
+  width: 100%;
   height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main__text {
+
+  /* border: 1px solid gray; */
+  border-radius: 20px;
+  background: rgb(16, 54, 63,.3);
+  color: white;
+  font-size: 50px;
+  font-weight: 200;
+  padding: 20px;
 }
 
 .categories__title {
@@ -115,6 +129,7 @@ Estilos carrusel */
   padding-left: 30px;
   width: 100%;
   position: relative;
+  /* height: inherit; */
 
 }
 
@@ -244,7 +259,7 @@ Estilos carrusel */
 .carousel {
   padding: 1rem 1.5rem;
   width: 300px;
-  height: 400px;
+  /* height: 400px; */
   /* background-color: #fff; */
   border-radius: 0.25rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -445,6 +460,7 @@ Estilos carrusel */
   padding: 40px;
   width: 600px;
   margin-bottom: 10px;
+  text-align: justify
 }
 
 /*estilos para la pagina de raiden*/
