--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ ul {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 400px;
+  /* height: 400px; */
   border-radius: 0px 0px 40px 40px;
   margin-bottom: 80px;
 }
@@ -93,7 +93,7 @@ ul {
 .main__image {
   background-image: url(https://images.gog.com/559fa91bed15eb7135bc9061467d3e075ac8412a70e95766d31d2741d58bd1bb_bg_crop_1366x655.jpg);
   width: 100%;
-  height: 500px;
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -223,7 +223,7 @@ Estilos carrusel */
 
 .footer {
   align-items: center;
-  background-color: #363535;
+  background-color: #2c2b2b;
   display: flex;
   height: 40px;
   width: 100%;
@@ -501,3 +501,56 @@ Estilos carrusel */
   background-color: transparent;
   background-image: url("https://vignette3.wikia.nocookie.net/mortalkombat/images/5/50/Wiki-background/revision/latest?cb=20170107134527&path-prefix=es")
 } */
+
+/* MODALES */
+
+
+.modalDialog {
+	position: fixed;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  text-align: center;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: 99999;
+	display:none;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: auto;
+}
+.modalDialog > div {
+	width: 590px;
+	position: relative;
+	margin: 10% auto;
+	padding: 5px 20px 13px 20px;
+	border-radius: 10px;
+	background: #fff;
+	background: -moz-linear-gradient(#fff, #999);
+	background: -webkit-linear-gradient(#fff, #999);
+	background: -o-linear-gradient(#fff, #999);
+  -webkit-transition: opacity 400ms ease-in;
+-moz-transition: opacity 400ms ease-in;
+transition: opacity 400ms ease-in;
+}
+.close {
+	background: #606061;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+.close:hover { background: #00d9ff; }
